discussion/kv_engine/168615/168615_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Reduce cost of including request.h

With the recent optimisations to other headers,
mcbp/protocol/request.h has been promoted to be the most expensive
header included in kv_engine_everything:

    *** Expensive headers:
    30128 ms: kv_engine/include/mcbp/protocol/request.h (included 162 times, avg 185 ms)

- The biggest contributor to the include cost is
  <privilege_database.h> (which isn't even used directly from
  request.h!) Remove it.

- The second biggest contributor is the inclusion of header.h; this is
  mostly needed as request.h has a number of inline methods which
  require the definition of Header. De-inline these methods so
  header.h is no longer required.

After these changes, protocol/request.h no longer shows in the top
hottest headers; which means it must cost less than 3996ms (the last
header in the list), compared to 30128ms previously.

Change-Id: I7f0eeefee510ff37f7fbd21aea336aaac4b329b1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-01-12 15:49:02.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-12 16:41:24.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14778/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:10:10: error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
#include "memcached_audit_events.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14778/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:10:10:
error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14778/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42759/ : FAILURE

Failure of GoogleTest "TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonYes_SnappyYes
C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp/testapp_xattr.cc(1935): error: Value of: resp.isSuccess()
  Actual: false
Expected: true
Expected to be able to store system xattrs
[  FAILED  ] TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonYes_SnappyYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (172 ms)
TransportProtocols/XattrTest.mb25928_SystemCanExceedDocumentLimit/Mcbp_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42759/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36234/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/probabilistic_counter.h:97:22:
error: unknown type name "uint16_t"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36234/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4423/ : FAILURE

Compile error at [2022-01-12T16:19:00.858Z] ../kv_engine/engines/ep/src/probabilistic_counter.h:97:22:
error: unknown type name "uint16_t"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4423/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16442/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16442/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13624/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24855/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4481/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15584/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16733/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17529/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
